--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "telegram-bot",
     "require": {
-        "php": ">=8.0"
+        "php": ">=8.0",
+        "mercadopago/dx-php": "^2.5"
     },
     "scripts": {
         "start": "php index.php"
