Configuração para Render

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
-PAGARME_API_KEY=sua_chave_api_aqui
-PAGARME_ENCRYPTION_KEY=sua_chave_criptografia_aqui
-WEBHOOK_SECRET=seu_segredo_webhook_aqui
-BASE_URL=https://seu-bot.onrender.com
-DATABASE_URL=sqlite:///payments.db
-TELEGRAM_BOT_TOKEN=seu_token_do_bot_telegram
+# Configurações do Telegram Bot
+BOT_TOKEN=seu_token_do_bot_aqui
+
+# Configurações do Flask
+FLASK_ENV=production
+SECRET_KEY=sua_chave_secreta_aqui
+
+# Outras configurações
+DATABASE_URL=sqlite:///app.db
