--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ requests==2.26.0
 qrcode[pil]==7.3.1
 flask>=2.3.0
 cryptography==3.3.2
-python-telegram-bot==20.7
+python-telegram-bot>=20.8
 gunicorn==20.1.0
 gunicorn==20.1.0
